--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="https://cdn-icons-png.flaticon.com/512/143/143655.png" alt="HTML 5 Picture">
+  <img src="Screenshot (326).png" alt="HTML 5 Picture">
   <h1>Abhishek Gairola</h1>
   <p>
     <em>Student at <strong>Graphic Era Hill University</strong></em>
